[package]
name = "overtime"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }  # Added serde feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0"
